logs/projx.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/decorator-4.1.2.dist-info'...
Listing './lib/python3.5/site-packages/networkx'...
Listing './lib/python3.5/site-packages/networkx/algorithms'...
Listing './lib/python3.5/site-packages/networkx/algorithms/approximation'...
Listing './lib/python3.5/site-packages/networkx/algorithms/approximation/tests'...
Listing './lib/python3.5/site-packages/networkx/algorithms/assortativity'...
Listing './lib/python3.5/site-packages/networkx/algorithms/assortativity/tests'...
Listing './lib/python3.5/site-packages/networkx/algorithms/bipartite'...
Listing './lib/python3.5/site-packages/networkx/algorithms/bipartite/tests'...
Listing './lib/python3.5/site-packages/networkx/algorithms/centrality'...
Listing './lib/python3.5/site-packages/networkx/algorithms/centrality/tests'...
Listing './lib/python3.5/site-packages/networkx/algorithms/chordal'...
Listing './lib/python3.5/site-packages/networkx/algorithms/chordal/tests'...
Listing './lib/python3.5/site-packages/networkx/algorithms/community'...
Listing './lib/python3.5/site-packages/networkx/algorithms/community/tests'...
Listing './lib/python3.5/site-packages/networkx/algorithms/components'...
Listing './lib/python3.5/site-packages/networkx/algorithms/components/tests'...
Listing './lib/python3.5/site-packages/networkx/algorithms/connectivity'...
Listing './lib/python3.5/site-packages/networkx/algorithms/connectivity/tests'...
Listing './lib/python3.5/site-packages/networkx/algorithms/flow'...
Listing './lib/python3.5/site-packages/networkx/algorithms/flow/tests'...
Listing './lib/python3.5/site-packages/networkx/algorithms/isomorphism'...
Listing './lib/python3.5/site-packages/networkx/algorithms/isomorphism/tests'...
Listing './lib/python3.5/site-packages/networkx/algorithms/link_analysis'...
Listing './lib/python3.5/site-packages/networkx/algorithms/link_analysis/tests'...
Listing './lib/python3.5/site-packages/networkx/algorithms/operators'...
Listing './lib/python3.5/site-packages/networkx/algorithms/operators/tests'...
Listing './lib/python3.5/site-packages/networkx/algorithms/shortest_paths'...
Listing './lib/python3.5/site-packages/networkx/algorithms/shortest_paths/tests'...
Listing './lib/python3.5/site-packages/networkx/algorithms/tests'...
Listing './lib/python3.5/site-packages/networkx/algorithms/traversal'...
Listing './lib/python3.5/site-packages/networkx/algorithms/traversal/tests'...
Listing './lib/python3.5/site-packages/networkx/algorithms/tree'...
Listing './lib/python3.5/site-packages/networkx/algorithms/tree/tests'...
Listing './lib/python3.5/site-packages/networkx/classes'...
Listing './lib/python3.5/site-packages/networkx/classes/tests'...
Listing './lib/python3.5/site-packages/networkx/drawing'...
Listing './lib/python3.5/site-packages/networkx/drawing/tests'...
Listing './lib/python3.5/site-packages/networkx/external'...
Listing './lib/python3.5/site-packages/networkx/generators'...
Listing './lib/python3.5/site-packages/networkx/generators/tests'...
Listing './lib/python3.5/site-packages/networkx/linalg'...
Listing './lib/python3.5/site-packages/networkx/linalg/tests'...
Listing './lib/python3.5/site-packages/networkx/readwrite'...
Listing './lib/python3.5/site-packages/networkx/readwrite/json_graph'...
Listing './lib/python3.5/site-packages/networkx/readwrite/json_graph/tests'...
Listing './lib/python3.5/site-packages/networkx/readwrite/tests'...
Listing './lib/python3.5/site-packages/networkx/testing'...
Listing './lib/python3.5/site-packages/networkx/testing/tests'...
Listing './lib/python3.5/site-packages/networkx/tests'...
Listing './lib/python3.5/site-packages/networkx/utils'...
Listing './lib/python3.5/site-packages/networkx/utils/tests'...
Listing './lib/python3.5/site-packages/networkx-1.9.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/projx'...
Listing './lib/python3.5/site-packages/projx/modules'...
Listing './lib/python3.5/site-packages/projx-0.3.6.egg-info'...
Listing './lib/python3.5/site-packages/pyparsing-2.0.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/doc'...
Listing './share/doc/networkx-1.9'...
Listing './share/doc/networkx-1.9/examples'...
Listing './share/doc/networkx-1.9/examples/3d_drawing'...
Listing './share/doc/networkx-1.9/examples/advanced'...
Listing './share/doc/networkx-1.9/examples/algorithms'...
Compiling './share/doc/networkx-1.9/examples/algorithms/rcm.py'...
***   File "./share/doc/networkx-1.9/examples/algorithms/rcm.py", line 15
    print "ordering",rcm
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share/doc/networkx-1.9/examples/basic'...
Listing './share/doc/networkx-1.9/examples/drawing'...
Compiling './share/doc/networkx-1.9/examples/drawing/giant_component.py'...
***   File "./share/doc/networkx-1.9/examples/drawing/giant_component.py", line 28
    print "PyGraphviz not found; drawing with spring layout; will be slow."
                                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './share/doc/networkx-1.9/examples/drawing/lanl_routes.py'...
***   File "./share/doc/networkx-1.9/examples/drawing/lanl_routes.py", line 24
    print "lanl.edges not found"
                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share/doc/networkx-1.9/examples/graph'...
Compiling './share/doc/networkx-1.9/examples/graph/degree_sequence.py'...
***   File "./share/doc/networkx-1.9/examples/graph/degree_sequence.py", line 19
    print is_valid_degree_sequence(z)
                                 ^
SyntaxError: invalid syntax

Listing './share/doc/networkx-1.9/examples/multigraph'...
Listing './share/doc/networkx-1.9/examples/pygraphviz'...
Compiling './share/doc/networkx-1.9/examples/pygraphviz/write_dotfile.py'...
***   File "./share/doc/networkx-1.9/examples/pygraphviz/write_dotfile.py", line 27
    print "pygraphviz or pydot were not found "
                                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share/python-wheels'...
